--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </div>
                     <div>
                         <label for="phone" class="block text-left text-blue-800 text-sm font-semibold mb-1">Phone (Optional):</label>
-                        <input type="tel" id="phone" name="phone" placeholder="+34 123 456 789"
+                        <input type="tel" id="phone" name="phone" placeholder="91 123 456 789"
                                class="w-full p-3 border-2 border-blue-300 rounded-lg text-blue-800 focus:outline-none focus:border-blue-500 transition-colors duration-200">
                     </div>
                     <input type="text" name="_honey" style="display:none">
