--- a/thanks.html
+++ b/thanks.html
@@ -3,63 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The IB Guys - Thank You!</title>
+    <title>Thank You for Signing Up! - AdaptED</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        /* Custom font import */
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap');
+        /* Import Montserrat font from Google Fonts */
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;800&display=swap');
+        
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: 'Montserrat', sans-serif; /* Apply Montserrat to the entire body */
+            /* Gradient background from dark blue to a slightly lighter blue */
+            background: linear-gradient(135deg, #0A1128 0%, #122A57 100%);
+            min-height: 100vh; /* Ensure body takes full viewport height */
+            display: flex;
+            align-items: center; /* Center content vertically */
+            justify-content: center; /* Center content horizontally */
+            padding: 1rem; /* Add some padding around the main container */
+            color: #E0E7FF; /* Light blue-gray for general text */
+            overflow: hidden; /* Hide overflow for aesthetics */
+        }
+
+        /* Custom animation for the main thank you message */
+        @keyframes scale-in {
+            from { transform: scale(0.8); opacity: 0; }
+            to { transform: scale(1); opacity: 1; }
+        }
+        .animate-scale-in {
+            animation: scale-in 0.8s ease-out forwards;
+        }
+
+        /* Subtle pulse for the button */
+        @keyframes button-pulse {
+            0% { transform: scale(1); box-shadow: 0 5px 15px rgba(0, 255, 255, 0.4); }
+            50% { transform: scale(1.02); box-shadow: 0 8px 20px rgba(0, 255, 255, 0.6); }
+            100% { transform: scale(1); box-shadow: 0 5px 15px rgba(0, 255, 255, 0.4); }
+        }
+        .btn-animate-pulse {
+            animation: button-pulse 2s infinite ease-in-out;
         }
     </style>
 </head>
-<body class="bg-gradient-to-br from-blue-900 via-blue-800 to-blue-700 min-h-screen flex items-center justify-center p-4">
-    <div class="bg-white bg-opacity-90 p-8 md:p-12 rounded-xl shadow-2xl max-w-4xl w-full text-center transform transition-all duration-500 ease-in-out scale-95 hover:scale-100">
-        <header class="mb-8">
-            <h1 class="text-5xl md:text-6xl font-extrabold text-blue-900 mb-4 tracking-tight">
-                The IB Guys
-            </h1>
-            <p class="text-xl md:text-2xl font-semibold text-blue-700 italic">
-                Real Help. Real Results. Real IB.
-            </p>
-        </header>
+<body>
+    <div class="bg-gray-900 bg-opacity-80 p-8 md:p-12 rounded-2xl shadow-2xl max-w-xl w-full text-center 
+                border border-cyan-700 animate-scale-in">
+        
+        <div class="mb-8">
+            <svg class="w-24 h-24 mx-auto text-cyan-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+            </svg>
+        </div>
 
-        <main class="mb-8">
-            <h2 class="text-4xl md:text-5xl font-bold text-blue-800 mb-6 animate-pulse">
-                Thank You for Joining Our Waitlist!
-            </h2>
-            <p class="text-lg md:text-xl text-blue-600 leading-relaxed mb-6">
-                We truly appreciate your interest in The IB Guys. Your journey towards academic excellence is important to us, and we're thrilled to have you on board.
-            </p>
-            <p class="text-md md:text-lg text-blue-500 mb-8">
-                We'll notify you as soon as we're ready to launch. Get ready to unlock your full potential!
-            </p>
+        <h1 class="text-5xl md:text-6xl font-extrabold text-cyan-400 mb-6 tracking-tight leading-tight">
+            You're In!
+        </h1>
+        <p class="text-xl md:text-2xl text-blue-100 leading-relaxed mb-8">
+            The future of personalized education awaits you.
+        </p>
 
-            <section class="bg-blue-100 p-6 rounded-lg shadow-inner border border-blue-200">
-                <h3 class="text-2xl font-bold text-blue-800 mb-4 flex items-center justify-center">
-                    💡 A Thought to Inspire 💡
-                </h3>
-                <p class="text-xl italic text-blue-700 leading-relaxed mb-4">
-                    "The beautiful thing about learning is that no one can take it away from you."
-                </p>
-                <p class="text-lg font-semibold text-blue-600">
-                    — B.B. King
-                </p>
-            </section>
+        <p class="text-lg md:text-xl text-blue-200 leading-relaxed mb-10">
+            Prepare for <b>next-level personalization</b> powered by cutting-edge tech,
+            and <b>unique resources</b> you won't find anywhere else.
+            Your inbox is now your gateway to the revolution!
+        </p>
 
-            <div class="mt-8">
-                <p class="text-lg text-blue-700 mb-4">
-                    While you wait, keep an eye on your inbox and our website for exciting updates!
-                </p>
-                <a href="index.html" class="inline-block px-8 py-3 bg-blue-600 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 transition-colors duration-300 transform hover:scale-105 active:scale-95">
-                    Back to Homepage
-                </a>
-            </div>
-        </main>
-
-        <footer class="text-blue-600 text-sm mt-8 pt-4 border-t border-blue-200">
-            &copy; 2025 The IB Guys. All rights reserved.
-        </footer>
+        <a href="index.html" 
+           class="inline-block px-8 py-4 bg-cyan-600 text-white font-bold text-lg rounded-lg shadow-md 
+                  hover:bg-cyan-500 transition-all duration-300 transform hover:scale-105 active:scale-95 
+                  border border-cyan-400 btn-animate-pulse">
+            Back to Home
+        </a>
     </div>
 </body>
 </html>
