--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <div id="intro-container">
         <header class="text-center mb-12">
             <h1 class="text-6xl md:text-7xl font-extrabold text-cyan-400 mb-4 tracking-tight leading-tight opacity-0" id="adapted-title">
-                AdaptED
+                AdaptEd
             </h1>
             <p class="text-2xl md:text-3xl font-semibold text-blue-300 italic mb-2 opacity-0" id="ib-guys-subtitle">
                 by The IB Guys
